--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --quiet --fix src/**",
+    "prettify": "prettier --write .",
+    "prettier-check": "prettier --check ."
   },
   "dependencies": {
     "chart.js": "^4.4.9",
@@ -17,15 +19,22 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.9",
     "@eslint/js": "^9.25.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@tailwindcss/vite": "^4.1.6",
+    "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-unicorn": "^59.0.1",
     "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.1.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
