--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,34 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+  "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["dom", "dom.iterable", "esnext","ES2020"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "verbatimModuleSyntax": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "noImplicitAny": false, // Recommended: Compiler complains about expressions implicitly typed as 'any'
+    "paths": {
+      "@/*": ["App/*"]
+    }
+  },
+  "include": [
+    // which files to compile
+    "src"
+  ],
+  "exclude": [
+    // which files to ignore
+    "node_modules",
+    "src/App/types/*",
   ]
 }
