--- a/package.json
+++ b/package.json
@@ -1,43 +1,32 @@
 {
   "name": "mbb-dashboard-client",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview",
-    "lint": "eslint --quiet --fix src/**",
-    "prettify": "prettier --write .",
-    "prettier-check": "prettier --check ."
+    "build": "rsbuild build",
+    "dev": "rsbuild dev --open",
+    "format": "prettier --write .",
+    "lint": "eslint .",
+    "preview": "rsbuild preview"
   },
   "dependencies": {
-    "chart.js": "^4.4.9",
-    "date-fns": "^4.1.0",
-    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.9",
-    "@eslint/js": "^9.25.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@tailwindcss/vite": "^4.1.6",
-    "@types/node": "^22.15.18",
+    "@eslint/compat": "^1.2.7",
+    "@eslint/js": "^9.23.0",
+    "@rsbuild/core": "^1.3.15",
+    "@rsbuild/plugin-react": "^1.3.0",
     "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.26.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react": "^7.37.5",
+    "@types/react-dom": "^19.1.3",
+    "eslint": "^9.23.0",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-unicorn": "^59.0.1",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.6",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.0"
   }
 }
