--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@eslint/js": "^9.23.0",
     "@rsbuild/core": "^1.3.15",
     "@rsbuild/plugin-react": "^1.3.0",
+    "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "eslint": "^9.23.0",
