--- a/package.json
+++ b/package.json
@@ -11,24 +11,28 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "recharts": "^2.15.3"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.7",
     "@eslint/js": "^9.23.0",
     "@rsbuild/core": "^1.3.15",
     "@rsbuild/plugin-react": "^1.3.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/d3": "^7.4.3",
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "daisyui": "^5.0.43",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.0"
   }
