--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -23,6 +24,7 @@
     "@rsbuild/plugin-react": "^1.3.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/d3": "^7.4.3",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
